--- a/index.html
+++ b/index.html
@@ -7,14 +7,20 @@
    <meta charset="UTF-8">
    <meta http-equiv="X-UA-Compatible" content="IE=edge">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+   <meta name="description" content="Site description">
 
+   <meta name="apple-mobile-web-app-title" content="PandaProject">
+   <meta name="application-name" content="PandaProject">
+   <meta name="msapplication-TileColor" content="#ffffff">
+   <meta name="msapplication-TileImage" content="/mstile-144x144.png">
+   <meta name="theme-color" content="#808080">
+   <link rel="icon" type="image/png" sizes="192x192" href="favicons/android-chrome-192x192.png">
    <link rel="apple-touch-icon" sizes="180x180" href="favicons/apple-touch-icon.png">
    <link rel="icon" type="image/png" sizes="32x32" href="favicons/favicon-32x32.png">
    <link rel="icon" type="image/png" sizes="16x16" href="favicons/favicon-16x16.png">
+   <link rel="shortcut icon" type="image/x-icon" href="favicons/favicon.ico">
+   <link rel="mask-icon" href="favicons/safari-pinned-tab.svg" color="#314b31">
    <link rel="manifest" href="favicons/site.webmanifest">
-   <link rel="mask-icon" href="favicons/safari-pinned-tab.svg" color="#404040">
-   <meta name="msapplication-TileColor" content="#25d192">
-   <meta name="theme-color" content="#808080">
 
    <link rel="stylesheet" href="css/style.min.css">
 </head>
@@ -26,7 +32,11 @@
          </div>
       </header>
       <main class="page">
-         <address></address>
+         <section class="page__hero hero">
+            <div class="hero__container">
+               <h1>Hello World</h1>
+            </div>
+         </section>
       </main>
       <footer class="footer">
          <div class="footer__container">
