--- a/index.html
+++ b/index.html
@@ -14,11 +14,12 @@
    <meta name="msapplication-TileColor" content="#ffffff">
    <meta name="msapplication-TileImage" content="/mstile-144x144.png">
    <meta name="theme-color" content="#808080">
+   <link rel="icon" type="image/png" sizes="256x256" href="favicons/android-chrome-256x256.png">
    <link rel="icon" type="image/png" sizes="192x192" href="favicons/android-chrome-192x192.png">
    <link rel="apple-touch-icon" sizes="180x180" href="favicons/apple-touch-icon.png">
    <link rel="icon" type="image/png" sizes="32x32" href="favicons/favicon-32x32.png">
    <link rel="icon" type="image/png" sizes="16x16" href="favicons/favicon-16x16.png">
-   <link rel="shortcut icon" type="image/x-icon" href="favicons/favicon.ico">
+   <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
    <link rel="mask-icon" href="favicons/safari-pinned-tab.svg" color="#314b31">
    <link rel="manifest" href="favicons/site.webmanifest">
 
