--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
    <meta name="apple-mobile-web-app-title" content="PandaProject">
    <meta name="application-name" content="PandaProject">
    <meta name="msapplication-TileColor" content="#ffffff">
-   <meta name="msapplication-TileImage" content="/mstile-144x144.png">
+   <meta name="msapplication-TileImage" content="favicons/mstile-144x144.png">
    <meta name="theme-color" content="#808080">
 
    <link rel="icon" type="image/png" sizes="192x192" href="favicons/android-chrome-192x192.png">
