--- a/index.html
+++ b/index.html
@@ -13,16 +13,17 @@
    <meta name="apple-mobile-web-app-title" content="PandaProject">
    <meta name="application-name" content="PandaProject">
    <meta name="msapplication-TileColor" content="#ffffff">
-   <meta name="msapplication-TileImage" content="favicons/mstile-144x144.png">
+   <meta name="msapplication-TileImage" content="icons/favicons/mstile-144x144.png">
    <meta name="theme-color" content="#808080">
 
-   <link rel="icon" type="image/png" sizes="192x192" href="favicons/android-chrome-192x192.png">
-   <link rel="apple-touch-icon" sizes="180x180" href="favicons/apple-touch-icon.png">
-   <link rel="icon" type="image/png" sizes="32x32" href="favicons/favicon-32x32.png">
-   <link rel="icon" type="image/png" sizes="16x16" href="favicons/favicon-16x16.png">
+   <link rel="icon" type="image/png" sizes="192x192" href="icons/favicons/android-chrome-192x192.png">
+   <link rel="apple-touch-icon" sizes="180x180" href="icons/favicons/apple-touch-icon.png">
+   <link rel="icon" type="image/png" sizes="32x32" href="icons/favicons/favicon-32x32.png">
+   <link rel="icon" type="image/png" sizes="16x16" href="icons/favicons/favicon-16x16.png">
+   <link rel="mask-icon" href="icons/favicons/safari-pinned-tab.svg" color="#314b31">
    <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
-   <link rel="mask-icon" href="favicons/safari-pinned-tab.svg" color="#314b31">
-   <link rel="manifest" href="favicons/site.webmanifest">
+   <link rel="msapplication-config" content="browserconfig.xml">
+   <link rel="manifest" href="site.webmanifest">
 
    <link rel="stylesheet" href="css/style.min.css">
 </head>
