--- a/index.html
+++ b/index.html
@@ -18,13 +18,12 @@
 
    <link rel="apple-touch-icon" sizes="180x180" href="icons/favicons/apple-touch-icon.png">
    <link rel="icon" type="image/png" sizes="32x32" href="icons/favicons/favicon-32x32.png">
-   <link rel="icon" type="image/png" sizes="194x194" href="icons/favicons/favicon-194x194.png">
    <link rel="icon" type="image/png" sizes="192x192" href="icons/favicons/android-chrome-192x192.png">
    <link rel="icon" type="image/png" sizes="16x16" href="icons/favicons/favicon-16x16.png">
    <link rel="mask-icon" href="icons/favicons/safari-pinned-tab.svg" color="#314b31">
    <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
 
-   <link rel="msapplication-config" content="browserconfig.xml">
+   <link rel="msapplication-config" href="browserconfig.xml">
    <link rel="manifest" href="site.webmanifest">
 
    <link rel="stylesheet" href="css/style.min.css">
