--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
    <link rel="mask-icon" href="icons/favicons/safari-pinned-tab.svg" color="#314b31">
    <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
 
-   <link rel="msapplication-config" href="browserconfig.xml">
+   <meta name="msapplication-config" content="browserconfig.xml">
    <link rel="manifest" href="site.webmanifest">
 
    <link rel="stylesheet" href="css/style.min.css">
