--- a/index.html
+++ b/index.html
@@ -2,30 +2,31 @@
 <html lang="en">
 
 <head>
-   <title>Document</title>
+	<title>Document</title>
 
-   <meta charset="UTF-8">
-   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-   <meta name="description" content="Site description">
-   <meta name="keywords" content="keyword 1, keyword 2, keyword 3" />
+	<meta charset="UTF-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta name="description" content="Site description">
+	<meta name="keywords" content="keyword 1, keyword 2, keyword 3" />
 
-   <meta name="apple-mobile-web-app-title" content="PandaProject">
-   <meta name="application-name" content="PandaProject">
-   <meta name="msapplication-TileColor" content="#ffffff">
-   <meta name="msapplication-TileImage" content="icons/favicons/mstile-144x144.png">
-   <meta name="theme-color" content="#808080">
+	<meta name="apple-mobile-web-app-title" content="PandaProject">
+	<meta name="application-name" content="PandaProject">
+	<meta name="msapplication-TileColor" content="#ffffff">
+	<meta name="msapplication-TileImage" content="icons/favicons/mstile-144x144.png">
+	<meta name="theme-color" content="#808080">
 
-   <link rel="apple-touch-icon" sizes="180x180" href="icons/favicons/apple-touch-icon.png">
-   <link rel="icon" type="image/png" sizes="32x32" href="icons/favicons/favicon-32x32.png">
-   <link rel="icon" type="image/png" sizes="192x192" href="icons/favicons/android-chrome-192x192.png">
-   <link rel="icon" type="image/png" sizes="16x16" href="icons/favicons/favicon-16x16.png">
-   <link rel="mask-icon" href="icons/favicons/safari-pinned-tab.svg" color="#314b31">
-   <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
+	<link rel="apple-touch-icon" sizes="180x180" href="icons/favicons/apple-touch-icon.png">
+	<link rel="icon" type="image/png" sizes="32x32" href="icons/favicons/favicon-32x32.png">
+	<link rel="icon" type="image/png" sizes="192x192" href="icons/favicons/android-chrome-192x192.png">
+	<link rel="icon" type="image/png" sizes="16x16" href="icons/favicons/favicon-16x16.png">
+	<link rel="mask-icon" href="icons/favicons/safari-pinned-tab.svg" color="#314b31">
+	<link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
 
-   <meta name="msapplication-config" content="browserconfig.xml">
+	<meta name="msapplication-config" content="browserconfig.xml">
+	<link rel="manifest" href="site.webmanifest">
 
-   <link rel="stylesheet" href="css/style.min.css">
+	<link rel="stylesheet" href="css/style.min.css">
 </head>
 
 <body>
